Added new routes, made some changes to documentation
